// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionCard Component handles undefined difficulty gracefully 1`] = `null`;

exports[`QuestionCard Component handles undefined options gracefully 1`] = `null`;

exports[`QuestionCard Component renders correctly with default props 1`] = `null`;

exports[`QuestionCard Component renders with custom testID 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "elevation": 3,
      "marginHorizontal": 0,
      "marginVertical": 8,
      "padding": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 4,
    }
  }
  testID="custom-question-card"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#2D3748",
          "fontSize": 16,
          "fontWeight": "600",
        }
      }
    >
      Question 
      1
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "backgroundColor": "#EDF2F7",
            "borderRadius": 4,
            "color": "#4A5568",
            "fontSize": 14,
            "marginRight": 8,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          }
        }
      >
        Regulations
      </Text>
      <Text
        style={
          [
            {
              "borderRadius": 4,
              "fontSize": 14,
              "fontWeight": "500",
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#FEEBC8",
              "color": "#C05621",
            },
          ]
        }
      >
        Medium
      </Text>
    </View>
  </View>
  <Text
    style={
      {
        "color": "#1A202C",
        "fontSize": 16,
        "lineHeight": 24,
        "marginBottom": 16,
      }
    }
  >
    What is the minimum flight visibility for VFR flight in Class G airspace below 1,200 feet AGL during the day?
  </Text>
  <View
    style={
      {
        "marginTop": 16,
      }
    }
  >
    <TouchableOpacity
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#F7FAFC",
            "borderColor": "#E2E8F0",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "marginBottom": 12,
            "padding": 12,
          },
          false,
        ]
      }
      testID="option-0"
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E2E8F0",
            "borderRadius": 14,
            "height": 28,
            "justifyContent": "center",
            "marginRight": 12,
            "width": 28,
          }
        }
      >
        <Text
          style={
            {
              "color": "#4A5568",
              "fontSize": 14,
              "fontWeight": "600",
            }
          }
        >
          A
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#2D3748",
            "flex": 1,
            "fontSize": 15,
          }
        }
      >
        1 mile
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#F7FAFC",
            "borderColor": "#E2E8F0",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "marginBottom": 12,
            "padding": 12,
          },
          false,
        ]
      }
      testID="option-1"
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E2E8F0",
            "borderRadius": 14,
            "height": 28,
            "justifyContent": "center",
            "marginRight": 12,
            "width": 28,
          }
        }
      >
        <Text
          style={
            {
              "color": "#4A5568",
              "fontSize": 14,
              "fontWeight": "600",
            }
          }
        >
          B
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#2D3748",
            "flex": 1,
            "fontSize": 15,
          }
        }
      >
        3 miles
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#F7FAFC",
            "borderColor": "#E2E8F0",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "marginBottom": 12,
            "padding": 12,
          },
          false,
        ]
      }
      testID="option-2"
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E2E8F0",
            "borderRadius": 14,
            "height": 28,
            "justifyContent": "center",
            "marginRight": 12,
            "width": 28,
          }
        }
      >
        <Text
          style={
            {
              "color": "#4A5568",
              "fontSize": 14,
              "fontWeight": "600",
            }
          }
        >
          C
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#2D3748",
            "flex": 1,
            "fontSize": 15,
          }
        }
      >
        5 miles
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#F7FAFC",
            "borderColor": "#E2E8F0",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "marginBottom": 12,
            "padding": 12,
          },
          false,
        ]
      }
      testID="option-3"
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E2E8F0",
            "borderRadius": 14,
            "height": 28,
            "justifyContent": "center",
            "marginRight": 12,
            "width": 28,
          }
        }
      >
        <Text
          style={
            {
              "color": "#4A5568",
              "fontSize": 14,
              "fontWeight": "600",
            }
          }
        >
          D
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#2D3748",
            "flex": 1,
            "fontSize": 15,
          }
        }
      >
        Clear of clouds
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`QuestionCard Component renders with different categories 1`] = `null`;

exports[`QuestionCard Component renders with different categories 2`] = `null`;

exports[`QuestionCard Component renders with different categories 3`] = `null`;

exports[`QuestionCard Component renders with different difficulty levels 1`] = `null`;

exports[`QuestionCard Component renders with different difficulty levels 2`] = `null`;

exports[`QuestionCard Component renders with different difficulty levels 3`] = `null`;

exports[`QuestionCard Component renders with long question text 1`] = `null`;

exports[`QuestionCard Component renders with no options 1`] = `null`;

exports[`QuestionCard Component renders with options and handles selection 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "elevation": 3,
      "marginHorizontal": 0,
      "marginVertical": 8,
      "padding": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 4,
    }
  }
  testID="question-card"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#2D3748",
          "fontSize": 16,
          "fontWeight": "600",
        }
      }
    >
      Question 
      1
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "backgroundColor": "#EDF2F7",
            "borderRadius": 4,
            "color": "#4A5568",
            "fontSize": 14,
            "marginRight": 8,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          }
        }
      >
        Regulations
      </Text>
      <Text
        style={
          [
            {
              "borderRadius": 4,
              "fontSize": 14,
              "fontWeight": "500",
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#FEEBC8",
              "color": "#C05621",
            },
          ]
        }
      >
        Medium
      </Text>
    </View>
  </View>
  <Text
    style={
      {
        "color": "#1A202C",
        "fontSize": 16,
        "lineHeight": 24,
        "marginBottom": 16,
      }
    }
  >
    What is the minimum flight visibility for VFR flight in Class G airspace below 1,200 feet AGL during the day?
  </Text>
  <View
    style={
      {
        "marginTop": 16,
      }
    }
  >
    <TouchableOpacity
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#F7FAFC",
            "borderColor": "#E2E8F0",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "marginBottom": 12,
            "padding": 12,
          },
          false,
        ]
      }
      testID="option-0"
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E2E8F0",
            "borderRadius": 14,
            "height": 28,
            "justifyContent": "center",
            "marginRight": 12,
            "width": 28,
          }
        }
      >
        <Text
          style={
            {
              "color": "#4A5568",
              "fontSize": 14,
              "fontWeight": "600",
            }
          }
        >
          A
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#2D3748",
            "flex": 1,
            "fontSize": 15,
          }
        }
      >
        1 mile
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#F7FAFC",
            "borderColor": "#E2E8F0",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "marginBottom": 12,
            "padding": 12,
          },
          {
            "backgroundColor": "#E6F6FF",
            "borderColor": "#3182CE",
          },
        ]
      }
      testID="option-1"
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E2E8F0",
            "borderRadius": 14,
            "height": 28,
            "justifyContent": "center",
            "marginRight": 12,
            "width": 28,
          }
        }
      >
        <Text
          style={
            {
              "color": "#4A5568",
              "fontSize": 14,
              "fontWeight": "600",
            }
          }
        >
          B
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#2D3748",
            "flex": 1,
            "fontSize": 15,
          }
        }
      >
        3 miles
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#F7FAFC",
            "borderColor": "#E2E8F0",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "marginBottom": 12,
            "padding": 12,
          },
          false,
        ]
      }
      testID="option-2"
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E2E8F0",
            "borderRadius": 14,
            "height": 28,
            "justifyContent": "center",
            "marginRight": 12,
            "width": 28,
          }
        }
      >
        <Text
          style={
            {
              "color": "#4A5568",
              "fontSize": 14,
              "fontWeight": "600",
            }
          }
        >
          C
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#2D3748",
            "flex": 1,
            "fontSize": 15,
          }
        }
      >
        5 miles
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#F7FAFC",
            "borderColor": "#E2E8F0",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "marginBottom": 12,
            "padding": 12,
          },
          false,
        ]
      }
      testID="option-3"
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E2E8F0",
            "borderRadius": 14,
            "height": 28,
            "justifyContent": "center",
            "marginRight": 12,
            "width": 28,
          }
        }
      >
        <Text
          style={
            {
              "color": "#4A5568",
              "fontSize": 14,
              "fontWeight": "600",
            }
          }
        >
          D
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#2D3748",
            "flex": 1,
            "fontSize": 15,
          }
        }
      >
        Clear of clouds
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;
